# django-stripe-sandbox

./: .gitignore  LICENSE.txt  README.md  cypress.json  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  runserver.sh
cypress/fixtures/: main.json
cypress/integration/: hello-cypress.spec.js  test-stripes-customer-create.spec.js  test-stripes-customer-delete.spec.js  test-stripes-customer-detail.spec.js  test-stripes-customer-list.spec.js  test-stripes-customer-update.spec.js  test-stripes-stripes-root.spec.js
django_stripe_sandbox/: asgi.py  context_processors.py  factories.py  helpers.py  helpers_testing.py  local_config_defaults.py  mixins.py  settings.py  test_factories.py  test_helpers.py  urls.py  wsgi.py
local_scripts/: .gitignore  cypress
scripts/: poetry-export-requirements  runserver-insecure.sh  runserver-test.sh  test-django.py  test-django.sh
scripts/venv-scripts/: postactivate.default  predeactivate
static/css/: base.css  styles.css
stripes/: apps.py  forms.py  mixins.py  models.py  test_mixins.py  test_models.py  test_templatetags.py  test_urls.py  test_views.py  urls.py  views.py
stripes/migrations/: 0001_initial.py  0002_alter_customer_stripe_customer.py  0003_paymentmethod.py  0004_customer_paymentmethods.py  0005_auto_20210914_2131.py  0006_alter_paymentmethod_customer.py
stripes/templates/stripes/: customer_detail.html  object_confirm_delete.html  object_detail.html  (+6 more)
stripes/templatetags/: debug.py  pretty_print.py  template_tags.py
templates/: base.html  base_form.html  base_template.html
