[tool.poetry]
name = "django-stripe-sandbox"
version = "0.1.0"
description = ""
authors = ["Nicholas Moen <arcanemachine@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
stripe = "^2.60.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
