[tool.poetry]
name = "django-stripe-sandbox"
version = "0.1.0"
description = ""
authors = ["Nicholas Moen <arcanemachine@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
stripe = "^2.60.0"
django-crispy-forms = "^1.12.0"
ipython = "^7.27.0"
factory-boy = "^3.2.0"
python-dotenv = "^0.19.0"
coverage = "^5.5"
coverage-badge = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
